    - use the same gwibber text in both appdetails views (LP: #614220)
    - make application name and summary accessible and grab focus (LP: #608140)
    - make description accessible (LP: #608140)
    - make info table accessible (LP: #608141)
  * softwarecenter/view/appdetailsview_webkit.py:
    - use the same gwibber text in both appdetails views (LP: #614220)
  * softwarecenter/view/availablepane.py,
    softwarecenter/view/installedpane.py:
    - refresh navigation bar correctly when we get a request to display a pkg
  * softwarecenter/view/pendingview.py:
    - display the name of the application holding the lock, when waiting for
      a package manager to quit (LP: #440058, #511213)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Aug 2010 23:19:03 +0200

software-center (2.1.9) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/utils.py:
    - add generic image downloader class
  * softwarecenter/app.py,
    softwarecenter/backend/paths.py,
    softwarecenter/db/application.py,
    softwarecenter/db/database.py,
    softwarecenter/distro/Ubuntu.py,
    softwarecenter/view/appdetailsview_gtk.py,
    softwarecenter/view/appview.py:
    - implement download and local caching of downloadable
      icons, display them in applist and appdetails views

  [ Michael Vogt ]
  * test/test_database.py:
    - re-enable sca test again
  * test/{test_downloader.py, test_ppa_iconfilename.py}:
    - add tests for the downloader and the iconfilename
  * softwarecenter/db/update.py:
    - add support for the inline icon_data, push them into 
      SOFTWARE_CENTER_ICON_CACHE_DIR, add tests
  * softwarecenter/backend/login_sso.py:
    - add support for ubuntu-sso-client login
  * merged lp:~mmcg069/software-center/appview-fix, that fixes
    overly large buttons

  [ Didier Roche ]
  * data/featured.menu.in:
    - add zoho integration as a featured app

  [ Kiwinote ]
  * <all>:
    - support deb files (much thanks to mvo for all his help!)
    - support apturls